--- a/nuxeo-test/pom.xml
+++ b/nuxeo-test/pom.xml
@@ -19,6 +19,7 @@
 		<!-- Test -->
 		<maven.test.skip>true</maven.test.skip>
 		<!-- Plugins -->
+		<plugin.antrun.version>1.7</plugin.antrun.version>
 		<plugin.assembly.version>2.4</plugin.assembly.version>
 		<plugin.compiler.version>3.1</plugin.compiler.version>
 		<plugin.dependency.version>2.8</plugin.dependency.version>
@@ -37,6 +38,7 @@
 	</organization>
 	<modules>
 		<module>nuxeo-test1</module>
+		<module>nuxeo-test2</module>
 	</modules>
 	<build>
 		<defaultGoal>package</defaultGoal>
@@ -78,6 +80,25 @@
 		</testResources>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-antrun-plugin</artifactId>
+					<version>${plugin.antrun.version}</version>
+					<executions>
+						<execution>
+							<phase>install</phase>
+							<goals>
+								<goal>run</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<tasks>
+							<delete file="${nuxeo.plugin.dir}/${project.build.finalName}.${project.packaging}" quiet="true" />
+							<copy file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${nuxeo.plugin.dir}" overwrite="true" />
+						</tasks>
+					</configuration>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
