--- a/nuxeo-test/pom.xml
+++ b/nuxeo-test/pom.xml
@@ -19,18 +19,10 @@
 		<!-- Test -->
 		<maven.test.skip>true</maven.test.skip>
 		<!-- Plugins -->
-		<plugin.antrun.version>1.7</plugin.antrun.version>
-		<plugin.assembly.version>2.4</plugin.assembly.version>
 		<plugin.compiler.version>3.1</plugin.compiler.version>
 		<plugin.dependency.version>2.8</plugin.dependency.version>
-		<plugin.ear.version>2.9</plugin.ear.version>
-		<plugin.jar.version>2.4</plugin.jar.version>
-		<plugin.jarsigner.version>1.3.2</plugin.jarsigner.version>
-		<plugin.release.version>2.5</plugin.release.version>
 		<plugin.resources.version>2.6</plugin.resources.version>
-		<plugin.shade.version>2.3</plugin.shade.version>
 		<plugin.surefire.version>2.17</plugin.surefire.version>
-		<plugin.war.version>2.4</plugin.war.version>
 	</properties>
 	<organization>
 		<name>Woodstock Tecnologia</name>
@@ -39,6 +31,7 @@
 	<modules>
 		<module>nuxeo-test1</module>
 		<module>nuxeo-test2</module>
+		<module>nuxeo-test-dependencies</module>
 	</modules>
 	<build>
 		<defaultGoal>package</defaultGoal>
@@ -82,30 +75,6 @@
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-antrun-plugin</artifactId>
-					<version>${plugin.antrun.version}</version>
-					<executions>
-						<execution>
-							<phase>install</phase>
-							<goals>
-								<goal>run</goal>
-							</goals>
-						</execution>
-					</executions>
-					<configuration>
-						<tasks>
-							<delete file="${nuxeo.plugin.dir}/${project.build.finalName}.${project.packaging}" quiet="true" />
-							<copy file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${nuxeo.plugin.dir}" overwrite="true" />
-						</tasks>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-assembly-plugin</artifactId>
-					<version>${plugin.assembly.version}</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>${plugin.compiler.version}</version>
 					<configuration>
@@ -116,16 +85,16 @@
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>${plugin.dependency.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>${plugin.resources.version}</version>
 					<configuration>
 						<encoding>${project.build.sourceEncoding}</encoding>
 					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-shade-plugin</artifactId>
-					<version>${plugin.shade.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -138,6 +107,22 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>br.net.woodstock.nuxeo.test</groupId>
+				<artifactId>nuxeo-test1</artifactId>
+				<version>${project.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>br.net.woodstock.nuxeo.test</groupId>
+				<artifactId>nuxeo-test2</artifactId>
+				<version>${project.version}</version>
+				<scope>provided</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
 		<dependency>
 			<groupId>javax.faces</groupId>
